ingress-all-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: raffles.com.vn
spec:
  ingressClassName: nginx
  rules:
  - host: minio-operator.raffles.com.vn
    http:
      paths:
      - backend:
          service:
            name: console
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: minio-tenant.raffles.com.vn
    http:
      paths:
      - backend:
          service:
            name: minio-dev-console
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: kafdrop.raffles.com.vn
    http:
      paths:
      - backend:
          service:
            name: kafka-kafdrop-service
            port:
              number: 9000
        path: /
        pathType: Prefix
  - host: airflow-ui.raffles.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-svc
            port:
              number: 8080
  - host: dremio.raffles.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dremio
            port:
              number: 9047
  - host: spark-master.raffles.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-master
            port:
              number: 8080
